--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,33 +53,33 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="52dp"
         android:layout_marginTop="104dp"
         android:layout_marginEnd="51dp"
-        android:text="@string/otheracti"
+        android:text="@string/te_tau_vaitinitxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="215dp"
-        android:layout_marginEnd="51dp"
-        android:text="@string/otheracti"
+        android:layout_width="96dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="52dp"
+        android:text="@string/nombrestxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="46dp"
         android:layout_marginTop="340dp"
-        android:layout_marginEnd="48dp"
-        android:text="@string/otheracti"
+        android:layout_marginEnd="56dp"
+        android:text="@string/formestxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
