--- a/app/src/main/res/layout/activity_forme.xml
+++ b/app/src/main/res/layout/activity_forme.xml
@@ -57,14 +57,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="216dp"
-        android:layout_marginTop="258dp"
+        android:layout_marginTop="308dp"
         android:layout_marginEnd="43dp"
+        android:contentDescription="@string/cacs"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/cacs" />
+        tools:srcCompat="@tools:sample/avatars" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
