--- a/app/src/main/res/layout/activity_couleur.xml
+++ b/app/src/main/res/layout/activity_couleur.xml
@@ -7,51 +7,6 @@
     tools:context=".CouleurActivity">
 
     <Button
-        android:id="@+id/button23"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/marron"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="405dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button24"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/bleu"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="405dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button20"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/mauve"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="315dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button21"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/gris"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="314dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button22"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/jaune"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="314dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,60 +29,105 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/button16"
         android:layout_width="78dp"
         android:layout_height="75dp"
-        android:text="@string/vert"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.453"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="114dp"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/noir"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="220dp" />
+
+    <Button
+        android:id="@+id/button22"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
+        android:text="@string/jaune"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="311dp" />
 
     <Button
         android:id="@+id/button11"
         android:layout_width="86dp"
         android:layout_height="72dp"
         android:text="@string/rouge"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="114dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="111dp" />
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/button21"
         android:layout_width="78dp"
         android:layout_height="75dp"
-        android:text="@string/rose"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="115dp"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/gris"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="311dp" />
 
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/button13"
         android:layout_width="78dp"
         android:layout_height="75dp"
-        android:text="@string/blanc"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="223dp"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/vert"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="111dp" />
 
     <Button
-        android:id="@+id/button16"
+        android:id="@+id/button24"
         android:layout_width="78dp"
         android:layout_height="75dp"
-        android:text="@string/noir"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="223dp"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/bleu"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="230dp"
+        tools:layout_editor_absoluteY="402dp" />
+
+    <Button
+        android:id="@+id/button23"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
+        android:text="@string/marron"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="114dp"
+        tools:layout_editor_absoluteY="402dp" />
 
     <Button
         android:id="@+id/button17"
         android:layout_width="78dp"
         android:layout_height="75dp"
         android:text="@string/orange"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="223dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="220dp" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
+        android:text="@string/rose"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="112dp" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
+        android:text="@string/blanc"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="220dp" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
+        android:text="@string/mauve"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="312dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
