--- a/app/src/main/res/layout/activity_numera.xml
+++ b/app/src/main/res/layout/activity_numera.xml
@@ -34,12 +34,14 @@
         android:layout_height="100dp"
         android:layout_marginStart="156dp"
         android:layout_marginTop="379dp"
+        android:layout_marginEnd="162dp"
         android:layout_marginBottom="123dp"
         android:text="@string/_4_fleur"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.155"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -47,7 +49,7 @@
         android:layout_width="93dp"
         android:layout_height="100dp"
         android:layout_marginEnd="52dp"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="348dp"
         android:text="@string/_2_mangue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,10 +60,12 @@
         android:layout_width="93dp"
         android:layout_height="100dp"
         android:layout_marginStart="156dp"
-        android:layout_marginBottom="220dp"
+        android:layout_marginTop="283dp"
+        android:layout_marginBottom="348dp"
         android:text="@string/_5_oiseaux"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
