--- a/app/src/main/res/layout/activity_couleur.xml
+++ b/app/src/main/res/layout/activity_couleur.xml
@@ -50,10 +50,11 @@
         android:id="@+id/button11"
         android:layout_width="86dp"
         android:layout_height="72dp"
+        android:layout_marginStart="56dp"
         android:text="@string/rouge"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="111dp" />
+        tools:layout_editor_absoluteY="115dp" />
 
     <Button
         android:id="@+id/button21"
