--- a/app/src/main/res/layout/activity_numera.xml
+++ b/app/src/main/res/layout/activity_numera.xml
@@ -7,132 +7,16 @@
     tools:context=".numeraActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/startgame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="17dp"
-        android:text="@string/Retour"
+        android:text="@string/commencer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="HardcodedText,MissingConstraints" />
-
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="52dp"
-        android:text="@string/_3_poisson"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button31"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="379dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="123dp"
-        android:text="@string/_4_fleur"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button30"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="348dp"
-        android:text="@string/_2_mangue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button29"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="283dp"
-        android:layout_marginBottom="348dp"
-        android:text="@string/_5_oiseaux"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button26"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="164dp"
-        android:text="@string/_6_pierres"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button25"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="164dp"
-        android:text="@string/_7_feuille"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button27"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="52dp"
-        android:text="@string/_8_femme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="52dp"
-        android:text="@string/_1_chien"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button28"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="280dp"
-        android:text="@string/_9_nuages"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button19"
-        android:layout_width="93dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="52dp"
-        android:text="@string/_0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.499" />
 
 
     <Button
