--- a/app/src/main/res/layout/activity_couleur.xml
+++ b/app/src/main/res/layout/activity_couleur.xml
@@ -50,10 +50,14 @@
         android:id="@+id/button11"
         android:layout_width="86dp"
         android:layout_height="72dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="115dp"
+        android:layout_marginEnd="268dp"
         android:text="@string/rouge"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="111dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button21"
