--- a/app/src/main/res/layout/activity_forme.xml
+++ b/app/src/main/res/layout/activity_forme.xml
@@ -58,9 +58,15 @@
         android:id="@+id/button32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="254dp"
+        android:layout_marginTop="367dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="316dp"
         android:text="@string/triangle"
-        tools:layout_editor_absoluteX="254dp"
-        tools:layout_editor_absoluteY="367dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText,MissingConstraints" />
 
 
