--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,25 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="69dp"
-        android:layout_height="23dp"
-        android:text="Kaoha nui"
+        android:layout_width="100dp"
+        android:layout_height="37dp"
+        android:text="@string/Kaoha_nui"
+        android:textSize="20dp"
+        android:textStyle="italic"
+        android:textColor="@color/red"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701"
+        app:layout_constraintVertical_bias="0.674"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="99dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="56dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="104dp"
         android:text="Te tau numera"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +34,10 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="99dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="215dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="232dp"
         android:text="Te tau reta"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,10 +45,10 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="99dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="341dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="360dp"
         android:text="a peni"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -52,10 +56,10 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="99dp"
-        android:layout_height="52dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
         android:layout_marginTop="104dp"
-        android:layout_marginEnd="51dp"
+        android:layout_marginEnd="136dp"
         android:text="@string/te_tau_vaitinitxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -63,10 +67,10 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="96dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="52dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="232dp"
+        android:layout_marginEnd="136dp"
         android:text="@string/nombrestxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -74,10 +78,10 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="102dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="340dp"
-        android:layout_marginEnd="44dp"
+        android:layout_width="128dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="360dp"
+        android:layout_marginEnd="136dp"
         android:text="@string/formestxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
