--- a/app/src/main/res/layout/activity_chiffre.xml
+++ b/app/src/main/res/layout/activity_chiffre.xml
@@ -18,135 +18,146 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="HardcodedText,MissingConstraints" />
 
+
     <Button
         android:id="@+id/button1"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="640dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="340dp"
+        android:layout_marginTop="588dp"
         android:background="@drawable/button_states_1"
         android:text="1"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="656dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="588dp"
         android:background="@drawable/button_states_2"
         android:text="2"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="312dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="268dp"
         android:background="@drawable/button_states_1"
         android:text="3"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="76dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="84dp"
         android:background="@drawable/button_states_1"
         android:text="4"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="132dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="52dp"
         android:background="@drawable/button_states_1"
         android:text="5"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-
     <Button
         android:id="@+id/button6"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="428dp"
-        android:layout_marginEnd="168dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="244dp"
         android:background="@drawable/button_states_1"
         android:text="6"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/button_states_1"
         android:text="7"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="472dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="440dp"
         android:background="@drawable/button_states_1"
         android:text="8"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="548dp"
-        android:layout_marginEnd="76dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginEnd="64dp"
         android:background="@drawable/button_states_1"
         android:text="9"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="280dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="244dp"
         android:background="@drawable/button_states_1"
         android:text="10"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button0"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="296dp"
-        android:layout_marginEnd="280dp"
+        android:layout_width="106dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="224dp"
+        android:layout_marginEnd="244dp"
         android:background="@drawable/button_states_1"
         android:text="0"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
