--- a/app/src/main/res/layout/activity_lettre.xml
+++ b/app/src/main/res/layout/activity_lettre.xml
@@ -22,168 +22,183 @@
 
     <Button
         android:id="@+id/button_a"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="176dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/button_states_1"
         android:text="a"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_e"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="448dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="348dp"
         android:background="@drawable/button_states_1"
         android:text="e"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_f"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="472dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="616dp"
         android:background="@drawable/button_states_1"
         android:text="f"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_h"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="244dp"
-        android:layout_marginTop="416dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="348dp"
         android:background="@drawable/button_states_1"
         android:text="h"
+        android:textSize="30dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_i"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="600dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="484dp"
         android:background="@drawable/button_states_1"
         android:text="i"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_k"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="420dp"
-        android:layout_marginTop="648dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="408dp"
+        android:layout_marginTop="484dp"
         android:background="@drawable/button_states_1"
         android:text="k"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_m"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="312dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/button_states_1"
         android:text="m"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_n"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="332dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="408dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/button_states_1"
         android:text="n"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_o"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/button_states_1"
         android:text="o"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_p"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="568dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="484dp"
         android:background="@drawable/button_states_1"
         android:text="p"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_r"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="224dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/button_states_1"
         android:text="r"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_t"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="448dp"
-        android:layout_marginTop="468dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="408dp"
+        android:layout_marginTop="348dp"
         android:background="@drawable/button_states_1"
         android:text="t"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_u"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="716dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="616dp"
         android:background="@drawable/button_states_1"
         android:text="u"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_v"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="412dp"
-        android:layout_marginTop="300dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_marginStart="408dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/button_states_1"
         android:text="v"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
