--- a/app/src/main/res/layout/activity_coloriage_mene.xml
+++ b/app/src/main/res/layout/activity_coloriage_mene.xml
@@ -4,10 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Coloriage_poti">
+    tools:context=".Coloriage_mene">
 
     <Button
-        android:id="@+id/buttonback2"
+        android:id="@+id/buttonkeemene2"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="56dp"
+        android:text="roi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonkeemeneereere"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="56dp"
+        android:text="ereere"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonkeemenetoka"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="428dp"
+        android:layout_marginTop="56dp"
+        android:text="tokatoka"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonbackmene"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
@@ -18,7 +51,7 @@
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/buttonkeemenekee"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="68dp"
@@ -28,48 +61,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="56dp"
-        android:text="pukiki"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText,MissingConstraints" />
-
-    <Button
-        android:id="@+id/button25"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginTop="56dp"
-        android:text="puatou"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints,HardcodedText" />
-
-    <Button
-        android:id="@+id/button19"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="428dp"
-        android:layout_marginTop="56dp"
-        android:text="ehuahi"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints,HardcodedText" />
-
     <ImageButton
-        android:id="@+id/imageButton_poti"
+        android:id="@+id/imageButton_mene_keekee"
         android:layout_width="442dp"
         android:layout_height="426dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="264dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bateau"
+        app:srcCompat="@drawable/mene"
         tools:ignore="MissingConstraints,HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
