--- a/app/src/main/res/layout/activity_couleur.xml
+++ b/app/src/main/res/layout/activity_couleur.xml
@@ -10,11 +10,11 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="428dp"
+        android:layout_marginTop="772dp"
         android:text="@string/Retour"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <TextView
@@ -23,121 +23,145 @@
         android:layout_height="22dp"
         android:text="@string/te_tau_vaitini"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="44dp" />
+        tools:layout_editor_absoluteY="37dp" />
 
     <Button
-        android:id="@+id/button16"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/noir"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="220dp" />
+        android:id="@+id/button17"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="226dp"
+        android:layout_marginEnd="49dp"
+        android:text="@string/orange"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button22"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="515dp"
+        android:layout_marginBottom="166dp"
         android:text="@string/jaune"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="311dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button11"
-        android:layout_width="86dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="115dp"
-        android:layout_marginEnd="268dp"
-        android:text="@string/rouge"
+        android:id="@+id/button14"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="397dp"
+        android:layout_marginTop="82dp"
+        android:text="@string/rose"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="226dp"
+        android:text="@string/mauve"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="226dp"
+        android:layout_marginBottom="455dp"
+        android:text="@string/noir"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button21"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/gris"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="311dp" />
-
-    <Button
         android:id="@+id/button13"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="222dp"
+        android:layout_marginTop="82dp"
         android:text="@string/vert"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="112dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button24"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="397dp"
+        android:layout_marginTop="514dp"
         android:text="@string/bleu"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="402dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button23"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/marron"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="114dp"
-        tools:layout_editor_absoluteY="402dp" />
-
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/orange"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="220dp" />
-
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/rose"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="111dp" />
+        android:id="@+id/button21"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="369dp"
+        android:layout_marginEnd="49dp"
+        android:text="@string/gris"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button15"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="368dp"
         android:text="@string/blanc"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="220dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button20"
-        android:layout_width="78dp"
-        android:layout_height="75dp"
-        android:text="@string/mauve"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="312dp" />
+        android:id="@+id/button11"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="82dp"
+        android:layout_marginBottom="599dp"
+        android:text="@string/rouge"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button23"
+        android:layout_width="155dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="368dp"
+        android:text="@string/marron"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="-15dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
