--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -7,24 +7,88 @@
     tools:context=".NumberActivity">
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="99dp"
-        android:layout_height="64dp"
+        android:id="@+id/btnChiffreUn"
+        android:layout_width="124dp"
+        android:layout_height="148dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="128dp"
+        android:text="@string/_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/faussereponse2"
+        android:layout_width="124dp"
+        android:layout_height="148dp"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="172dp"
+        android:text="@string/_7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/faussereponse3"
+        android:layout_width="124dp"
+        android:layout_height="148dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/_4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/faussereponse1"
+        android:layout_width="124dp"
+        android:layout_height="148dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="128dp"
+        android:text="@string/_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/retour_n"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="418dp"
+        android:layout_marginTop="898dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/Retour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="HardcodedText,MissingConstraints" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/quitter"
-        android:layout_width="38dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="680dp"
-        android:text="x"
+        android:id="@+id/quit"
+        android:layout_width="46dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/x"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/Hae"
+        android:layout_width="318dp"
+        android:layout_height="341dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginBottom="136dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="367dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/hae"
+        android:contentDescription="@string/hae_en_marquisien" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
