--- a/app/src/main/res/layout/activity_ua_potu.xml
+++ b/app/src/main/res/layout/activity_ua_potu.xml
@@ -25,50 +25,40 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/btnjuste"
-        android:layout_width="124dp"
-        android:layout_height="148dp"
-        android:layout_marginStart="305dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="172dp"
-        android:text="@string/_2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/faussereponse4"
-        android:layout_width="124dp"
-        android:layout_height="148dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/_4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
         android:id="@+id/faussereponse6"
-        android:layout_width="124dp"
+        android:layout_width="149dp"
         android:layout_height="148dp"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="128dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/sixfaux"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/_8"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="151dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <Button
-        android:id="@+id/faussereponse5"
-        android:layout_width="124dp"
+        android:id="@+id/faussereponse8"
+        android:layout_width="149dp"
         android:layout_height="148dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="128dp"
-        android:text="@string/_8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        android:text="@string/_10"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="451dp"
+        tools:layout_editor_absoluteY="127dp" />
+
+    <Button
+        android:id="@+id/faussereponse7"
+        android:layout_width="149dp"
+        android:layout_height="148dp"
+        android:text="@string/_5"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="301dp"
+        tools:layout_editor_absoluteY="127dp" />
+
+    <Button
+        android:id="@+id/btnjuste9"
+        android:layout_width="149dp"
+        android:layout_height="148dp"
+        android:text="@string/_2"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <ImageView
         android:id="@+id/potuimage"
@@ -76,10 +66,10 @@
         android:layout_height="341dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="136dp"
+        android:contentDescription="@string/potu_en_marquisien"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/potu"
-        android:contentDescription="@string/potu_en_marquisien" />
+        app:srcCompat="@drawable/potu" />
 
     <Button
         android:id="@+id/quit_p"
